account: Convert views to functional components

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -1,4 +1,12 @@
 {
+  "account.containers.change-password-form.index.currentPassword": "Current password",
+  "account.containers.change-password-form.index.newPassword": "New password",
+  "account.containers.change-password-form.index.newPasswordConfirm": "Confirm new password",
+  "account.containers.change-password-form.index.revokeAllAccess": "Revoke all access",
+  "account.containers.change-password-form.index.revokeAllAccessDescription": "Check this option if you also wish to revoke all your currently active sessions",
+  "account.containers.change-password-form.index.success": "Password updated",
+  "account.containers.change-password-form.index.successMessage": "Your password was updated successfully",
+  "account.containers.change-password-form.index.updatePassword": "Update password",
   "account.views.authorize.index.modalTitle": "Request for permission",
   "account.views.authorize.index.modalSubtitle": "{clientName} is requesting to be granted the following rights:",
   "account.views.authorize.index.loginInfo": "You are logged in as {userId}.",
@@ -32,6 +40,7 @@
   "account.views.update-password.index.logoutAllDevices": "Sign out from all devices",
   "account.views.update-password.index.revokeWarning": "This will revoke access from all signed in devices",
   "account.views.update-password.index.sessionRevoked": "Your password was changed and all active sessions were revoked",
+  "account.views.validate.index.backToAccount": "Back to Account",
   "account.views.validate.index.contactInfoValidation": "Contact info validation",
   "account.views.validate.index.validateSuccess": "Validation successful",
   "account.views.validate.index.validateFail": "There was an error and the contact info could not be validated",
@@ -60,8 +69,8 @@
   "components.navigation.side.index.hideSidebar": "Hide sidebar",
   "components.notification.details.index.showDetails": "Show details",
   "components.notification.details.index.hideDetails": "Hide details",
-  "components.offline-status.index.offline": "The Console went offline",
-  "components.offline-status.index.online": "The Console is back online",
+  "components.offline-status.index.offline": "{applicationName} went offline",
+  "components.offline-status.index.online": "{applicationName} is back online",
   "components.safe-inspector.index.copied": "Copied to clipboard!",
   "components.safe-inspector.index.toggleVisibility": "Toggle visibility",
   "components.safe-inspector.index.copyClipboard": "Copy to clipboard",
@@ -212,9 +221,6 @@
   "console.components.user-data-form.index.emailPlaceholder": "mail@example.com",
   "console.components.user-data-form.index.emailAddressDescription": "Primary email address used for logging in; this address is not publicly visible",
   "console.components.user-data-form.index.modalWarning": "Are you sure you want to delete the user \"{userId}\". This action cannot be undone and it will not be possible to reuse the user ID.",
-  "console.components.user-data-form.index.validateSpecial": "{field} must have at least {special} special {special, plural, one {character} other {characters}}",
-  "console.components.user-data-form.index.validateUppercase": "{field} must have at least {upper} uppercase {upper, plural, one {character} other {characters}}",
-  "console.components.user-data-form.index.validateDigit": "{field} must have at least {digit} {digit, plural, one {digit} other {digits}}",
   "console.components.webhook-form.index.idPlaceholder": "my-new-webhook",
   "console.components.webhook-form.index.messageInfo": "For each enabled message type, an optional path can be defined which will be appended to the base URL",
   "console.components.webhook-form.index.deleteWebhook": "Delete Webhook",
@@ -309,8 +315,6 @@
   "console.lib.events.definitions.synthetic.status.resumed:type": "Stream resumed",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "The event stream has been resumed after being paused",
   "console.lib.events.definitions.synthetic.status.resumed:details": "The event stream has been resumed by the user and will receive new subsequent event data. Note that event data which was possibly emitted during the stream pause will not be re-delivered.",
-  "console.store.middleware.logics.lib.applicationIsOfflineTitle": "The application is offline",
-  "console.store.middleware.logics.lib.applicationIsOfflineMessage": "The action cannot be performed because the application is currently offline or has connection issues. Please check your internet connection and try again.",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
   "console.views.admin-user-management-edit.index.deleteSuccess": "User deleted",
   "console.views.application-add.index.applicationName": "Application name",
@@ -791,25 +795,28 @@
   "lib.shared-messages.validateAddressFormat": "{field} must be in the format \"host\" or \"host:port\"",
   "lib.shared-messages.validateApiKey": "API keys must follow the format \"NNSXS.[…].[…]\"",
   "lib.shared-messages.validateDelayFormat": "{field} must be a positive, whole number",
+  "lib.shared-messages.validateDigit": "{field} must have at least {digit} {digit, plural, one {digit} other {digits}}",
   "lib.shared-messages.validateEmail": "An email address must use exactly one \"@\" and use no special characters",
-  "lib.shared-messages.validateHexLength": "{field} must be a complete hex value",
   "lib.shared-messages.validateFreqNumberic": "All frequency values must be positive integers",
   "lib.shared-messages.validateFreqRequired": "All frequency values are required. Please remove empty entries.",
+  "lib.shared-messages.validateHexLength": "{field} must be a complete hex value",
   "lib.shared-messages.validateIdFormat": "{field} must contain only lowercase letters, numbers and dashes (-)",
   "lib.shared-messages.validateInt32": "{field} must be a whole number, negative or positive",
   "lib.shared-messages.validateLatitude": "Latitude must be a whole or decimal number between -90 and 90",
   "lib.shared-messages.validateLength": "{field} must be exactly {length} characters long",
   "lib.shared-messages.validateLongitude": "Longitude must be a whole or decimal number between -180 and 180",
-  "lib.shared-messages.validateNumberGte": "{field} must be at least {min} or higher",
-  "lib.shared-messages.validateNumberLte": "{field} must be {max} or lower",
   "lib.shared-messages.validateMqttPassword": "{field} must be empty or have at least 2 characters",
   "lib.shared-messages.validateMqttUrl": "MQTT URLs must have the format \"mqtt[s]://[username][:password]@host.domain[:port]\"",
   "lib.shared-messages.validateNoSpaces": "{field} must contain no spaces",
+  "lib.shared-messages.validateNumberGte": "{field} must be at least {min} or higher",
+  "lib.shared-messages.validateNumberLte": "{field} must be {max} or lower",
   "lib.shared-messages.validatePasswordMatch": "Passwords must match",
   "lib.shared-messages.validateRequired": "{field} is required",
   "lib.shared-messages.validateRights": "At least one right must be selected",
+  "lib.shared-messages.validateSpecial": "{field} must have at least {special} special {special, plural, one {character} other {characters}}",
   "lib.shared-messages.validateTooLong": "{field} must have less than {max} characters",
   "lib.shared-messages.validateTooShort": "{field} must have at least {min} characters",
+  "lib.shared-messages.validateUppercase": "{field} must have at least {upper} uppercase {upper, plural, one {character} other {characters}}",
   "lib.shared-messages.validateUrl": "Must be a valid URL format, contain no spaces or special characters",
   "lib.shared-messages.validFrom": "Valid from",
   "lib.shared-messages.validTo": "Valid to",
@@ -818,5 +825,7 @@
   "lib.shared-messages.webhookBaseUrl": "Base URL",
   "lib.shared-messages.webhookFormat": "Webhook format",
   "lib.shared-messages.webhookId": "Webhook ID",
-  "lib.shared-messages.webhooks": "Webhooks"
+  "lib.shared-messages.webhooks": "Webhooks",
+  "lib.store.logics.create-request-logic.applicationIsOfflineTitle": "{applicationName} is offline",
+  "lib.store.logics.create-request-logic.applicationIsOfflineMessage": "The action cannot be performed because your host machine is currently offline or has connection issues. Please check your internet connection and try again."
 }
