--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -1,4 +1,12 @@
 {
+  "account.containers.change-password-form.index.currentPassword": "Xxxxxxx xxxxxxxx",
+  "account.containers.change-password-form.index.newPassword": "Xxx xxxxxxxx",
+  "account.containers.change-password-form.index.newPasswordConfirm": "Xxxxxxx xxx xxxxxxxx",
+  "account.containers.change-password-form.index.revokeAllAccess": "Xxxxxx xxx xxxxxx",
+  "account.containers.change-password-form.index.revokeAllAccessDescription": "Xxxxx xxxx xxxxxx xx xxx xxxx xxxx xx xxxxxx xxx xxxx xxxxxxxxx xxxxxx xxxxxxxx",
+  "account.containers.change-password-form.index.success": "Xxxxxxxx xxxxxxx",
+  "account.containers.change-password-form.index.successMessage": "Xxxx xxxxxxxx xxx xxxxxxx xxxxxxxxxxxx",
+  "account.containers.change-password-form.index.updatePassword": "Xxxxxx xxxxxxxx",
   "account.views.authorize.index.modalTitle": "Xxxxxxx xxx xxxxxxxxxx",
   "account.views.authorize.index.modalSubtitle": "{clientName} xx xxxxxxxxxx xx xx xxxxxxx xxx xxxxxxxxx xxxxxx:",
   "account.views.authorize.index.loginInfo": "Xxx xxx xxxxxx xx xx {userId}.",
@@ -32,6 +40,7 @@
   "account.views.update-password.index.logoutAllDevices": "Xxxx xxx xxxx xxx xxxxxxx",
   "account.views.update-password.index.revokeWarning": "Xxxx xxxx xxxxxx xxxxxx xxxx xxx xxxxxx xx xxxxxxx",
   "account.views.update-password.index.sessionRevoked": "Xxxx xxxxxxxx xxx xxxxxxx xxx xxx xxxxxx xxxxxxxx xxxx xxxxxxx",
+  "account.views.validate.index.backToAccount": "Xxxx xx Xxxxxxx",
   "account.views.validate.index.contactInfoValidation": "Xxxxxxx xxxx xxxxxxxxxx",
   "account.views.validate.index.validateSuccess": "Xxxxxxxxxx xxxxxxxxxx",
   "account.views.validate.index.validateFail": "Xxxxx xxx xx xxxxx xxx xxx xxxxxxx xxxx xxxxx xxx xx xxxxxxxxx",
@@ -60,8 +69,8 @@
   "components.navigation.side.index.hideSidebar": "Xxxx xxxxxxx",
   "components.notification.details.index.showDetails": "Xxxx xxxxxxx",
   "components.notification.details.index.hideDetails": "Xxxx xxxxxxx",
-  "components.offline-status.index.offline": "Xxx Xxxxxxx xxxx xxxxxxx",
-  "components.offline-status.index.online": "Xxx Xxxxxxx xx xxxx xxxxxx",
+  "components.offline-status.index.offline": "{applicationName} xxxx xxxxxxx",
+  "components.offline-status.index.online": "{applicationName} xx xxxx xxxxxx",
   "components.safe-inspector.index.copied": "Xxxxxx xx xxxxxxxxx!",
   "components.safe-inspector.index.toggleVisibility": "Xxxxxx xxxxxxxxxx",
   "components.safe-inspector.index.copyClipboard": "Xxxx xx xxxxxxxxx",
@@ -212,9 +221,6 @@
   "console.components.user-data-form.index.emailPlaceholder": "xxxx@xxxxxxx.xxx",
   "console.components.user-data-form.index.emailAddressDescription": "Xxxxxxx xxxxx xxxxxxx xxxx xxx xxxxxxx xx; xxxx xxxxxxx xx xxx xxxxxxxx xxxxxxx",
   "console.components.user-data-form.index.modalWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxx \"{userId}\". Xxxx xxxxxx xxxxxx xx xxxxxx xxx xx xxxx xxx xx xxxxxxxx xx xxxxx xxx xxxx XX.",
-  "console.components.user-data-form.index.validateSpecial": "{field} xxxx xxxx xx xxxxx {special} xxxxxxx {special, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
-  "console.components.user-data-form.index.validateUppercase": "{field} xxxx xxxx xx xxxxx {upper} xxxxxxxxx {upper, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
-  "console.components.user-data-form.index.validateDigit": "{field} xxxx xxxx xx xxxxx {digit} {digit, plural, =one {xxxxx} other {xxxxxx}}",
   "console.components.webhook-form.index.idPlaceholder": "xx-xxx-xxxxxxx",
   "console.components.webhook-form.index.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxxx xxx xx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxx xxxx XXX",
   "console.components.webhook-form.index.deleteWebhook": "Xxxxxx Xxxxxxx",
@@ -309,8 +315,6 @@
   "console.lib.events.definitions.synthetic.status.resumed:type": "Xxxxxx xxxxxxx",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "Xxx xxxxx xxxxxx xxx xxxx xxxxxxx xxxxx xxxxx xxxxxx",
   "console.lib.events.definitions.synthetic.status.resumed:details": "Xxx xxxxx xxxxxx xxx xxxx xxxxxxx xx xxx xxxx xxx xxxx xxxxxxx xxx xxxxxxxxxx xxxxx xxxx. Xxxx xxxx xxxxx xxxx xxxxx xxx xxxxxxxx xxxxxxx xxxxxx xxx xxxxxx xxxxx xxxx xxx xx xx-xxxxxxxxx.",
-  "console.store.middleware.logics.lib.applicationIsOfflineTitle": "Xxx xxxxxxxxxxx xx xxxxxxx",
-  "console.store.middleware.logics.lib.applicationIsOfflineMessage": "Xxx xxxxxx xxxxxx xx xxxxxxxxx xxxxxxx xxx xxxxxxxxxxx xx xxxxxxxxx xxxxxxx xx xxx xxxxxxxxxx xxxxxx. Xxxxxx xxxxx xxxx xxxxxxxx xxxxxxxxxx xxx xxx xxxxx.",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
   "console.views.admin-user-management-edit.index.deleteSuccess": "Xxxx xxxxxxx",
   "console.views.application-add.index.applicationName": "Xxxxxxxxxxx xxxx",
@@ -791,25 +795,28 @@
   "lib.shared-messages.validateAddressFormat": "{field} xxxx xx xx xxx xxxxxx \"xxxx\" xx \"xxxx:xxxx\"",
   "lib.shared-messages.validateApiKey": "XXX xxxx xxxx xxxxxx xxx xxxxxx \"XXXXX.[x].[x]\"",
   "lib.shared-messages.validateDelayFormat": "{field} xxxx xx x xxxxxxxx, xxxxx xxxxxx",
+  "lib.shared-messages.validateDigit": "{field} xxxx xxxx xx xxxxx {digit} {digit, plural, =one {xxxxx} other {xxxxxx}}",
   "lib.shared-messages.validateEmail": "Xx xxxxx xxxxxxx xxxx xxx xxxxxxx xxx \"@\" xxx xxx xx xxxxxxx xxxxxxxxxx",
-  "lib.shared-messages.validateHexLength": "{field} xxxx xx x xxxxxxxx xxx xxxxx",
   "lib.shared-messages.validateFreqNumberic": "Xxx xxxxxxxxx xxxxxx xxxx xx xxxxxxxx xxxxxxxx",
   "lib.shared-messages.validateFreqRequired": "Xxx xxxxxxxxx xxxxxx xxx xxxxxxxx. Xxxxxx xxxxxx xxxxx xxxxxxx.",
+  "lib.shared-messages.validateHexLength": "{field} xxxx xx x xxxxxxxx xxx xxxxx",
   "lib.shared-messages.validateIdFormat": "{field} xxxx xxxxxxx xxxx xxxxxxxxx xxxxxxx, xxxxxxx xxx xxxxxx (-)",
   "lib.shared-messages.validateInt32": "{field} xxxx xx x xxxxx xxxxxx, xxxxxxxx xx xxxxxxxx",
   "lib.shared-messages.validateLatitude": "Xxxxxxxx xxxx xx x xxxxx xx xxxxxxx xxxxxx xxxxxxx -xx xxx xx",
   "lib.shared-messages.validateLength": "{field} xxxx xx xxxxxxx {length} xxxxxxxxxx xxxx",
   "lib.shared-messages.validateLongitude": "Xxxxxxxxx xxxx xx x xxxxx xx xxxxxxx xxxxxx xxxxxxx -xxx xxx xxx",
-  "lib.shared-messages.validateNumberGte": "{field} xxxx xx xx xxxxx {min} xx xxxxxx",
-  "lib.shared-messages.validateNumberLte": "{field} xxxx xx {max} xx xxxxx",
   "lib.shared-messages.validateMqttPassword": "{field} xxxx xx xxxxx xx xxxx xx xxxxx x xxxxxxxxxx",
   "lib.shared-messages.validateMqttUrl": "XXXX XXXx xxxx xxxx xxx xxxxxx \"xxxx[x]://[xxxxxxxx][:xxxxxxxx]@xxxx.xxxxxx[:xxxx]\"",
   "lib.shared-messages.validateNoSpaces": "{field} xxxx xxxxxxx xx xxxxxx",
+  "lib.shared-messages.validateNumberGte": "{field} xxxx xx xx xxxxx {min} xx xxxxxx",
+  "lib.shared-messages.validateNumberLte": "{field} xxxx xx {max} xx xxxxx",
   "lib.shared-messages.validatePasswordMatch": "Xxxxxxxxx xxxx xxxxx",
   "lib.shared-messages.validateRequired": "{field} xx xxxxxxxx",
   "lib.shared-messages.validateRights": "Xx xxxxx xxx xxxxx xxxx xx xxxxxxxx",
+  "lib.shared-messages.validateSpecial": "{field} xxxx xxxx xx xxxxx {special} xxxxxxx {special, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
   "lib.shared-messages.validateTooLong": "{field} xxxx xxxx xxxx xxxx {max} xxxxxxxxxx",
   "lib.shared-messages.validateTooShort": "{field} xxxx xxxx xx xxxxx {min} xxxxxxxxxx",
+  "lib.shared-messages.validateUppercase": "{field} xxxx xxxx xx xxxxx {upper} xxxxxxxxx {upper, plural, =one {xxxxxxxxx} other {xxxxxxxxxx}}",
   "lib.shared-messages.validateUrl": "Xxxx xx x xxxxx XXX xxxxxx, xxxxxxx xx xxxxxx xx xxxxxxx xxxxxxxxxx",
   "lib.shared-messages.validFrom": "Xxxxx xxxx",
   "lib.shared-messages.validTo": "Xxxxx xx",
@@ -818,5 +825,7 @@
   "lib.shared-messages.webhookBaseUrl": "Xxxx XXX",
   "lib.shared-messages.webhookFormat": "Xxxxxxx xxxxxx",
   "lib.shared-messages.webhookId": "Xxxxxxx XX",
-  "lib.shared-messages.webhooks": "Xxxxxxxx"
+  "lib.shared-messages.webhooks": "Xxxxxxxx",
+  "lib.store.logics.create-request-logic.applicationIsOfflineTitle": "{applicationName} xx xxxxxxx",
+  "lib.store.logics.create-request-logic.applicationIsOfflineMessage": "Xxx xxxxxx xxxxxx xx xxxxxxxxx xxxxxxx xxxx xxxx xxxxxxx xx xxxxxxxxx xxxxxxx xx xxx xxxxxxxxxx xxxxxx. Xxxxxx xxxxx xxxx xxxxxxxx xxxxxxxxxx xxx xxx xxxxx."
 }
