console: Add documentation and support links

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -11,7 +11,6 @@
   "components.file-input.index.tooBig": "The selected file is too large",
   "components.file-input.index.remove": "Remove",
   "components.footer.index.footer": "You are the network. Let's build this thing together.",
-  "components.footer.index.getSupport": "Get support",
   "components.form.section.index.expand": "Expand section",
   "components.form.section.index.collapse": "Collapse section",
   "components.input.generate.generate": "Generate",
@@ -404,10 +403,12 @@
   "console.views.overview.index.createGateway": "Register a gateway",
   "console.views.overview.index.gotoApplications": "Go to applications",
   "console.views.overview.index.gotoGateways": "Go to gateways",
+  "console.views.overview.index.needHelp": "Need help? Have a look at our {documentationLink} or {supportLink}.",
+  "console.views.overview.index.needHelpShort": "Need help? Have a look at our {link}.",
   "console.views.overview.index.welcome": "Welcome to the Console!",
   "console.views.overview.index.welcomeBack": "Welcome back, {userName}! 👋",
-  "console.views.overview.index.getStarted": "Get started right away by creating an application or registering a gateway",
-  "console.views.overview.index.continueWorking": "Walk right through to your applications and/or gateways",
+  "console.views.overview.index.getStarted": "Get started right away by creating an application or registering a gateway.",
+  "console.views.overview.index.continueWorking": "Walk right through to your applications and/or gateways.",
   "console.views.overview.index.componentStatus": "Component status",
   "console.views.overview.index.versionInfo": "Version info",
   "lib.components.init.initializing": "Initializing…",
@@ -549,6 +550,7 @@
   "lib.shared-messages.devName": "End device name",
   "lib.shared-messages.disabled": "Disabled",
   "lib.shared-messages.disconnected": "Disconnected",
+  "lib.shared-messages.documentation": "Documentation",
   "lib.shared-messages.downlink": "Downlink",
   "lib.shared-messages.downlinkAck": "Downlink ack",
   "lib.shared-messages.downlinkFailed": "Downlink failed",
@@ -596,6 +598,7 @@
   "lib.shared-messages.general": "General",
   "lib.shared-messages.generalInformation": "General information",
   "lib.shared-messages.generalSettings": "General settings",
+  "lib.shared-messages.getSupport": "Get Support",
   "lib.shared-messages.gsServerAddressDescription": "The address of the Gateway Server to connect to",
   "lib.shared-messages.hardware": "Hardware",
   "lib.shared-messages.hardwareVersion": "Hardware version",
