--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -11,7 +11,6 @@
   "components.file-input.index.tooBig": "Xxx xxxxxxxx xxxx xx xxx xxxxx",
   "components.file-input.index.remove": "Xxxxxx",
   "components.footer.index.footer": "Xxx xxx xxx xxxxxxx. Xxx'x xxxxx xxxx xxxxx xxxxxxxx.",
-  "components.footer.index.getSupport": "Xxx xxxxxxx",
   "components.form.section.index.expand": "Xxxxxx xxxxxxx",
   "components.form.section.index.collapse": "Xxxxxxxx xxxxxxx",
   "components.input.generate.generate": "Xxxxxxxx",
@@ -404,10 +403,12 @@
   "console.views.overview.index.createGateway": "Xxxxxxxx x xxxxxxx",
   "console.views.overview.index.gotoApplications": "Xx xx xxxxxxxxxxxx",
   "console.views.overview.index.gotoGateways": "Xx xx xxxxxxxx",
+  "console.views.overview.index.needHelp": "Xxxx xxxx? Xxxx x xxxx xx xxx {documentationLink} xx {supportLink}.",
+  "console.views.overview.index.needHelpShort": "Xxxx xxxx? Xxxx x xxxx xx xxx {link}.",
   "console.views.overview.index.welcome": "Xxxxxxx xx xxx Xxxxxxx!",
   "console.views.overview.index.welcomeBack": "Xxxxxxx xxxx, {userName}! xx",
-  "console.views.overview.index.getStarted": "Xxx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxxxxxxxxxx xx xxxxxxxxxxx x xxxxxxx",
-  "console.views.overview.index.continueWorking": "Xxxx xxxxx xxxxxxx xx xxxx xxxxxxxxxxxx xxx/xx xxxxxxxx",
+  "console.views.overview.index.getStarted": "Xxx xxxxxxx xxxxx xxxx xx xxxxxxxx xx xxxxxxxxxxx xx xxxxxxxxxxx x xxxxxxx.",
+  "console.views.overview.index.continueWorking": "Xxxx xxxxx xxxxxxx xx xxxx xxxxxxxxxxxx xxx/xx xxxxxxxx.",
   "console.views.overview.index.componentStatus": "Xxxxxxxxx xxxxxx",
   "console.views.overview.index.versionInfo": "Xxxxxxx xxxx",
   "lib.components.init.initializing": "Xxxxxxxxxxxxx",
@@ -549,6 +550,7 @@
   "lib.shared-messages.devName": "Xxx xxxxxx xxxx",
   "lib.shared-messages.disabled": "Xxxxxxxx",
   "lib.shared-messages.disconnected": "Xxxxxxxxxxxx",
+  "lib.shared-messages.documentation": "Xxxxxxxxxxxxx",
   "lib.shared-messages.downlink": "Xxxxxxxx",
   "lib.shared-messages.downlinkAck": "Xxxxxxxx xxx",
   "lib.shared-messages.downlinkFailed": "Xxxxxxxx xxxxxx",
@@ -596,6 +598,7 @@
   "lib.shared-messages.general": "Xxxxxxx",
   "lib.shared-messages.generalInformation": "Xxxxxxx xxxxxxxxxxx",
   "lib.shared-messages.generalSettings": "Xxxxxxx xxxxxxxx",
+  "lib.shared-messages.getSupport": "Xxx Xxxxxxx",
   "lib.shared-messages.gsServerAddressDescription": "Xxx xxxxxxx xx xxx Xxxxxxx Xxxxxx xx xxxxxxx xx",
   "lib.shared-messages.hardware": "Xxxxxxxx",
   "lib.shared-messages.hardwareVersion": "Xxxxxxxx xxxxxxx",
