console,dev: Update locales and shared messages

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -22,8 +22,8 @@
   "components.navigation.side.index.hideSidebar": "Hide sidebar",
   "components.notification.details.index.showDetails": "Show details",
   "components.notification.details.index.hideDetails": "Hide details",
-  "components.offline-status.index.offline": "The application went offline",
-  "components.offline-status.index.online": "The application is back online",
+  "components.offline-status.index.offline": "The Console went offline",
+  "components.offline-status.index.online": "The Console is back online",
   "components.safe-inspector.index.copied": "Copied to clipboard!",
   "components.safe-inspector.index.toggleVisibility": "Toggle visibility",
   "components.safe-inspector.index.copyClipboard": "Copy to clipboard",
@@ -262,6 +262,8 @@
   "console.lib.events.definitions.synthetic.status.paused:preview": "The event stream has been paused",
   "console.lib.events.definitions.synthetic.status.resumed:type": "Stream resumed",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "The event stream has been resumed after being paused",
+  "console.store.middleware.logics.lib.applicationIsOfflineTitle": "The application is offline",
+  "console.store.middleware.logics.lib.applicationIsOfflineMessage": "The action cannot be performed because the application is currently offline or has connection issues. Please check your internet connection and try again.",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
   "console.views.admin-user-management-edit.index.deleteSuccess": "User deleted",
   "console.views.application-add.index.applicationName": "Application name",
@@ -503,6 +505,7 @@
   "lib.shared-messages.confirmPassword": "Confirm password",
   "lib.shared-messages.connected": "Connected",
   "lib.shared-messages.connecting": "Connecting",
+  "lib.shared-messages.connectionIssues": "Connection issues",
   "lib.shared-messages.createApiKey": "Create API key",
   "lib.shared-messages.created": "Created",
   "lib.shared-messages.createdAt": "Created at",
