--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -22,8 +22,8 @@
   "components.navigation.side.index.hideSidebar": "Xxxx xxxxxxx",
   "components.notification.details.index.showDetails": "Xxxx xxxxxxx",
   "components.notification.details.index.hideDetails": "Xxxx xxxxxxx",
-  "components.offline-status.index.offline": "Xxx xxxxxxxxxxx xxxx xxxxxxx",
-  "components.offline-status.index.online": "Xxx xxxxxxxxxxx xx xxxx xxxxxx",
+  "components.offline-status.index.offline": "Xxx Xxxxxxx xxxx xxxxxxx",
+  "components.offline-status.index.online": "Xxx Xxxxxxx xx xxxx xxxxxx",
   "components.safe-inspector.index.copied": "Xxxxxx xx xxxxxxxxx!",
   "components.safe-inspector.index.toggleVisibility": "Xxxxxx xxxxxxxxxx",
   "components.safe-inspector.index.copyClipboard": "Xxxx xx xxxxxxxxx",
@@ -262,6 +262,8 @@
   "console.lib.events.definitions.synthetic.status.paused:preview": "Xxx xxxxx xxxxxx xxx xxxx xxxxxx",
   "console.lib.events.definitions.synthetic.status.resumed:type": "Xxxxxx xxxxxxx",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "Xxx xxxxx xxxxxx xxx xxxx xxxxxxx xxxxx xxxxx xxxxxx",
+  "console.store.middleware.logics.lib.applicationIsOfflineTitle": "Xxx xxxxxxxxxxx xx xxxxxxx",
+  "console.store.middleware.logics.lib.applicationIsOfflineMessage": "Xxx xxxxxx xxxxxx xx xxxxxxxxx xxxxxxx xxx xxxxxxxxxxx xx xxxxxxxxx xxxxxxx xx xxx xxxxxxxxxx xxxxxx. Xxxxxx xxxxx xxxx xxxxxxxx xxxxxxxxxx xxx xxx xxxxx.",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
   "console.views.admin-user-management-edit.index.deleteSuccess": "Xxxx xxxxxxx",
   "console.views.application-add.index.applicationName": "Xxxxxxxxxxx xxxx",
@@ -503,6 +505,7 @@
   "lib.shared-messages.confirmPassword": "Xxxxxxx xxxxxxxx",
   "lib.shared-messages.connected": "Xxxxxxxxx",
   "lib.shared-messages.connecting": "Xxxxxxxxxx",
+  "lib.shared-messages.connectionIssues": "Xxxxxxxxxx xxxxxx",
   "lib.shared-messages.createApiKey": "Xxxxxx XXX xxx",
   "lib.shared-messages.created": "Xxxxxxx",
   "lib.shared-messages.createdAt": "Xxxxxxx xx",
