dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -76,10 +76,11 @@
   "console.components.events.messages.selectedMacVersion": "Selected MAC version",
   "console.components.events.messages.rx1Delay": "Rx1 Delay",
   "console.components.events.messages.eventDetails": "Event details",
+  "console.components.events.messages.rawEvent": "Raw event",
   "console.components.events.messages.errorOverviewEntry": "There was an error and the event cannot be displayed. The raw event can by viewed by clicking this row.",
   "console.components.events.messages.dataPreview": "Data preview",
   "console.components.events.messages.seeAllActivity": "See all activity",
-  "console.components.events.messages.syntheticEvent": "Note: This meta event did not originate from the event stream",
+  "console.components.events.messages.syntheticEvent": "Note: This meta event did not originate from the network but was generated automatically by the Console. It is not related to any end device or gateway activity.",
   "console.components.events.messages.eventsTruncated": "Old events have been truncated to save memory. The current event limit per stream is {limit}.",
   "console.components.events.messages.eventUnavailable": "This event is not available anymore. It was likely truncated to save memory.",
   "console.components.events.previews.shared.json-payload.index.invalid": "Invalid JSON",
@@ -248,20 +249,28 @@
   "console.containers.webhooks-table.index.baseUrl": "Base URL",
   "console.lib.events.definitions.synthetic.error.unknown:type": "Unknown error",
   "console.lib.events.definitions.synthetic.error.unknown:preview": "An unknown error occurred and one or more events could not be retrieved",
+  "console.lib.events.definitions.synthetic.error.unknown:details": "The Console encountered an unexpected error while handling the event stream data. It is possible that event data could not be displayed (correctly) as a result. Note that this is an internal error which does not imply any malfunction of your gateways or end devices.",
   "console.lib.events.definitions.synthetic.error.network_error:type": "Network error",
   "console.lib.events.definitions.synthetic.error.network_error:preview": "The stream connection was lost due to a network error",
+  "console.lib.events.definitions.synthetic.error.network_error:details": "The Console was not able to fetch further stream events because the network connection of your host machine was interrupted. This can have various causes, such as your host machine switching Wi-Fi networks or experiencing drops in signal strength. Please check your internet connection and ensure a stable internet connection to avoid stream disconnects. The stream will reconnect automatically once the internet connection has been re-established.",
   "console.lib.events.definitions.synthetic.status.reconnecting:type": "Reconnecting",
   "console.lib.events.definitions.synthetic.status.reconnecting:preview": "Attempting to reconnect…",
+  "console.lib.events.definitions.synthetic.status.reconnecting:details": "The Console will periodically try to reconnect to the event stream if the connection was interrupted.",
   "console.lib.events.definitions.synthetic.status.reconnected:type": "Stream reconnected",
   "console.lib.events.definitions.synthetic.status.reconnected:preview": "The stream connection has been re-established",
+  "console.lib.events.definitions.synthetic.status.reconnected:details": "The Console was able to reconnect to the internet and resumed the event stream. Subsequent event data will be received and displayed. Note that event data which was possibly emitted during the network disruption will not be re-delivered.",
   "console.lib.events.definitions.synthetic.status.closed:type": "Stream connection closed",
   "console.lib.events.definitions.synthetic.status.closed:preview": "The connection was closed by the stream provider",
+  "console.lib.events.definitions.synthetic.status.closed:details": "The Console received a close signal from the stream provider. This usually means that the backend server shut down. This can have various causes, such as scheduled maintenance or malfunction which caused a forced restart. The Console will then reconnect automatically once the stream provider becomes available again.",
   "console.lib.events.definitions.synthetic.status.cleared:type": "Events cleared",
   "console.lib.events.definitions.synthetic.status.cleared:preview": "The events list has been cleared",
+  "console.lib.events.definitions.synthetic.status.cleared:details": "The list of displayed events has been cleared.",
   "console.lib.events.definitions.synthetic.status.paused:type": "Stream paused",
   "console.lib.events.definitions.synthetic.status.paused:preview": "The event stream has been paused",
+  "console.lib.events.definitions.synthetic.status.paused:details": "The event stream has been paused by the user. Subsequent event data will not be displayed until the stream is resumed.",
   "console.lib.events.definitions.synthetic.status.resumed:type": "Stream resumed",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "The event stream has been resumed after being paused",
+  "console.lib.events.definitions.synthetic.status.resumed:details": "The event stream has been resumed by the user and will receive new subsequent event data. Note that event data which was possibly emitted during the stream pause will not be re-delivered.",
   "console.store.middleware.logics.lib.applicationIsOfflineTitle": "The application is offline",
   "console.store.middleware.logics.lib.applicationIsOfflineMessage": "The action cannot be performed because the application is currently offline or has connection issues. Please check your internet connection and try again.",
   "console.views.admin-user-management-edit.index.updateSuccess": "User updated",
