--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -76,10 +76,11 @@
   "console.components.events.messages.selectedMacVersion": "Xxxxxxxx XXX xxxxxxx",
   "console.components.events.messages.rx1Delay": "Xxx Xxxxx",
   "console.components.events.messages.eventDetails": "Xxxxx xxxxxxx",
+  "console.components.events.messages.rawEvent": "Xxx xxxxx",
   "console.components.events.messages.errorOverviewEntry": "Xxxxx xxx xx xxxxx xxx xxx xxxxx xxxxxx xx xxxxxxxxx. Xxx xxx xxxxx xxx xx xxxxxx xx xxxxxxxx xxxx xxx.",
   "console.components.events.messages.dataPreview": "Xxxx xxxxxxx",
   "console.components.events.messages.seeAllActivity": "Xxx xxx xxxxxxxx",
-  "console.components.events.messages.syntheticEvent": "Xxxx: Xxxx xxxx xxxxx xxx xxx xxxxxxxxx xxxx xxx xxxxx xxxxxx",
+  "console.components.events.messages.syntheticEvent": "Xxxx: Xxxx xxxx xxxxx xxx xxx xxxxxxxxx xxxx xxx xxxxxxx xxx xxx xxxxxxxxx xxxxxxxxxxxxx xx xxx Xxxxxxx. Xx xx xxx xxxxxxx xx xxx xxx xxxxxx xx xxxxxxx xxxxxxxx.",
   "console.components.events.messages.eventsTruncated": "Xxx xxxxxx xxxx xxxx xxxxxxxxx xx xxxx xxxxxx. Xxx xxxxxxx xxxxx xxxxx xxx xxxxxx xx {limit}.",
   "console.components.events.messages.eventUnavailable": "Xxxx xxxxx xx xxx xxxxxxxxx xxxxxxx. Xx xxx xxxxxx xxxxxxxxx xx xxxx xxxxxx.",
   "console.components.events.previews.shared.json-payload.index.invalid": "Xxxxxxx XXXX",
@@ -248,20 +249,28 @@
   "console.containers.webhooks-table.index.baseUrl": "Xxxx XXX",
   "console.lib.events.definitions.synthetic.error.unknown:type": "Xxxxxxx xxxxx",
   "console.lib.events.definitions.synthetic.error.unknown:preview": "Xx xxxxxxx xxxxx xxxxxxxx xxx xxx xx xxxx xxxxxx xxxxx xxx xx xxxxxxxxx",
+  "console.lib.events.definitions.synthetic.error.unknown:details": "Xxx Xxxxxxx xxxxxxxxxxx xx xxxxxxxxxx xxxxx xxxxx xxxxxxxx xxx xxxxx xxxxxx xxxx. Xx xx xxxxxxxx xxxx xxxxx xxxx xxxxx xxx xx xxxxxxxxx (xxxxxxxxx) xx x xxxxxx. Xxxx xxxx xxxx xx xx xxxxxxxx xxxxx xxxxx xxxx xxx xxxxx xxx xxxxxxxxxxx xx xxxx xxxxxxxx xx xxx xxxxxxx.",
   "console.lib.events.definitions.synthetic.error.network_error:type": "Xxxxxxx xxxxx",
   "console.lib.events.definitions.synthetic.error.network_error:preview": "Xxx xxxxxx xxxxxxxxxx xxx xxxx xxx xx x xxxxxxx xxxxx",
+  "console.lib.events.definitions.synthetic.error.network_error:details": "Xxx Xxxxxxx xxx xxx xxxx xx xxxxx xxxxxxx xxxxxx xxxxxx xxxxxxx xxx xxxxxxx xxxxxxxxxx xx xxxx xxxx xxxxxxx xxx xxxxxxxxxxx. Xxxx xxx xxxx xxxxxxx xxxxxx, xxxx xx xxxx xxxx xxxxxxx xxxxxxxxx Xx-Xx xxxxxxxx xx xxxxxxxxxxxx xxxxx xx xxxxxx xxxxxxxx. Xxxxxx xxxxx xxxx xxxxxxxx xxxxxxxxxx xxx xxxxxx x xxxxxx xxxxxxxx xxxxxxxxxx xx xxxxx xxxxxx xxxxxxxxxxx. Xxx xxxxxx xxxx xxxxxxxxx xxxxxxxxxxxxx xxxx xxx xxxxxxxx xxxxxxxxxx xxx xxxx xx-xxxxxxxxxxx.",
   "console.lib.events.definitions.synthetic.status.reconnecting:type": "Xxxxxxxxxxxx",
   "console.lib.events.definitions.synthetic.status.reconnecting:preview": "Xxxxxxxxxx xx xxxxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnecting:details": "Xxx Xxxxxxx xxxx xxxxxxxxxxxx xxx xx xxxxxxxxx xx xxx xxxxx xxxxxx xx xxx xxxxxxxxxx xxx xxxxxxxxxxx.",
   "console.lib.events.definitions.synthetic.status.reconnected:type": "Xxxxxx xxxxxxxxxxx",
   "console.lib.events.definitions.synthetic.status.reconnected:preview": "Xxx xxxxxx xxxxxxxxxx xxx xxxx xx-xxxxxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.reconnected:details": "Xxx Xxxxxxx xxx xxxx xx xxxxxxxxx xx xxx xxxxxxxx xxx xxxxxxx xxx xxxxx xxxxxx. Xxxxxxxxxx xxxxx xxxx xxxx xx xxxxxxxx xxx xxxxxxxxx. Xxxx xxxx xxxxx xxxx xxxxx xxx xxxxxxxx xxxxxxx xxxxxx xxx xxxxxxx xxxxxxxxxx xxxx xxx xx xx-xxxxxxxxx.",
   "console.lib.events.definitions.synthetic.status.closed:type": "Xxxxxx xxxxxxxxxx xxxxxx",
   "console.lib.events.definitions.synthetic.status.closed:preview": "Xxx xxxxxxxxxx xxx xxxxxx xx xxx xxxxxx xxxxxxxx",
+  "console.lib.events.definitions.synthetic.status.closed:details": "Xxx Xxxxxxx xxxxxxxx x xxxxx xxxxxx xxxx xxx xxxxxx xxxxxxxx. Xxxx xxxxxxx xxxxx xxxx xxx xxxxxxx xxxxxx xxxx xxxx. Xxxx xxx xxxx xxxxxxx xxxxxx, xxxx xx xxxxxxxxx xxxxxxxxxxx xx xxxxxxxxxxx xxxxx xxxxxx x xxxxxx xxxxxxx. Xxx Xxxxxxx xxxx xxxx xxxxxxxxx xxxxxxxxxxxxx xxxx xxx xxxxxx xxxxxxxx xxxxxxx xxxxxxxxx xxxxx.",
   "console.lib.events.definitions.synthetic.status.cleared:type": "Xxxxxx xxxxxxx",
   "console.lib.events.definitions.synthetic.status.cleared:preview": "Xxx xxxxxx xxxx xxx xxxx xxxxxxx",
+  "console.lib.events.definitions.synthetic.status.cleared:details": "Xxx xxxx xx xxxxxxxxx xxxxxx xxx xxxx xxxxxxx.",
   "console.lib.events.definitions.synthetic.status.paused:type": "Xxxxxx xxxxxx",
   "console.lib.events.definitions.synthetic.status.paused:preview": "Xxx xxxxx xxxxxx xxx xxxx xxxxxx",
+  "console.lib.events.definitions.synthetic.status.paused:details": "Xxx xxxxx xxxxxx xxx xxxx xxxxxx xx xxx xxxx. Xxxxxxxxxx xxxxx xxxx xxxx xxx xx xxxxxxxxx xxxxx xxx xxxxxx xx xxxxxxx.",
   "console.lib.events.definitions.synthetic.status.resumed:type": "Xxxxxx xxxxxxx",
   "console.lib.events.definitions.synthetic.status.resumed:preview": "Xxx xxxxx xxxxxx xxx xxxx xxxxxxx xxxxx xxxxx xxxxxx",
+  "console.lib.events.definitions.synthetic.status.resumed:details": "Xxx xxxxx xxxxxx xxx xxxx xxxxxxx xx xxx xxxx xxx xxxx xxxxxxx xxx xxxxxxxxxx xxxxx xxxx. Xxxx xxxx xxxxx xxxx xxxxx xxx xxxxxxxx xxxxxxx xxxxxx xxx xxxxxx xxxxx xxxx xxx xx xx-xxxxxxxxx.",
   "console.store.middleware.logics.lib.applicationIsOfflineTitle": "Xxx xxxxxxxxxxx xx xxxxxxx",
   "console.store.middleware.logics.lib.applicationIsOfflineMessage": "Xxx xxxxxx xxxxxx xx xxxxxxxxx xxxxxxx xxx xxxxxxxxxxx xx xxxxxxxxx xxxxxxx xx xxx xxxxxxxxxx xxxxxx. Xxxxxx xxxxx xxxx xxxxxxxx xxxxxxxxxx xxx xxx xxxxx.",
   "console.views.admin-user-management-edit.index.updateSuccess": "Xxxx xxxxxxx",
